--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -98,8 +98,8 @@
   --card-foreground: var(--color-neutral-100);
   --popover: color-mix(in srgb, var(--background) 98%, var(--color-white));
   --popover-foreground: var(--color-neutral-100);
-  --primary: var(--color-neutral-100);
-  --primary-foreground: var(--color-neutral-800);
+  --primary: oklch(1 0 0 / 5%);
+  --primary-foreground: oklch(0.8 0 0);
   --secondary: --alpha(var(--color-white) / 4%);
   --secondary-foreground: var(--color-neutral-100);
   --muted: --alpha(var(--color-white) / 4%);
